--- a/DualButton/src/main/res/values/attrs.xml
+++ b/DualButton/src/main/res/values/attrs.xml
@@ -32,8 +32,9 @@
         <attr name="clickableSecond" format="boolean"/>
         <attr name="duration" format="integer"/>
         <attr name="dualDirection" format="enum">
-            <enum name="rtl" value="0"/>
-            <enum name="ltr" value="1"/>
+            <enum name="touchPoint" value="0"/>
+            <enum name="rtl" value="1"/>
+            <enum name="ltr" value="2"/>
         </attr>
         <attr name="dualType" format="enum">
             <enum name="reveal" value="0"/>
